--- a/DataPoint.vcxproj
+++ b/DataPoint.vcxproj
@@ -127,9 +127,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="DataPoint.cpp" />
     <ClCompile Include="quarter.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="DataPoint.h" />
     <ClInclude Include="quarter.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
