--- a/DataPoint.vcxproj
+++ b/DataPoint.vcxproj
@@ -129,10 +129,12 @@
   <ItemGroup>
     <ClCompile Include="DataPoint.cpp" />
     <ClCompile Include="quarter.cpp" />
+    <ClCompile Include="Tree.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DataPoint.h" />
     <ClInclude Include="quarter.h" />
+    <ClInclude Include="Tree.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
