--- a/DataPoint.vcxproj
+++ b/DataPoint.vcxproj
@@ -128,10 +128,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="DataPoint.cpp" />
+    <ClCompile Include="month.cpp" />
     <ClCompile Include="quarter.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DataPoint.h" />
+    <ClInclude Include="month.h" />
     <ClInclude Include="quarter.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
